  `new_vignette`) gain a `github` argument that optionally sends the repo to 
  GitHub public account upon creation.

* The `"rstudio"` template has been added as a template for project creating 
  functions (`presentation`, `new_report` and `new_vignette`)presentations.  Use
  `present = "rstudio"`.  For more information see:
  http://www.rstudio.com/ide/docs/presentations/overview

IMPROVEMENTS

* `GQ`, `CA`, `LL` and `US` parse out both "fi" and "fl" ligatures more 
  effectively, whereas previously "fi" was assumed if a ligature was detected.

* `new_report` now allows global options to be set that allows numeric values to 
  be passed to the template option like speed dial. See ?new_report for more.

* The reports package now has a staticdocs generated help site: 
  http://trinker.github.io/reports/
  
* The reports package now has a related programs/packages help site: 
  http://trinker.github.io/reports/dependencies

* reports gains an HTML vignette (with video explanations) to better explain 
  package use.  Use `browseVignettes(package = 'reports')` to view the vignette.

* `new_report` now moves a **css** directory in a template to the **REPORT** 
  directory rather than the main directory.

* Functions that utilize the `copy2clip` argument were set to `TRUE` as the 
  defualt.  This has been changed to `copy2clip = interactive()` to accommodate
  use with knitr.

CHANGES

* `html5` and `reveal.js` are now Deprecated.  The birth of the slidify package 
  makes maintaining these functions pointless.  These functions will be removed 
  from the reports package upon the next update.

* `US` has been renamed to `UF` (underscore fill) and gets a counterpart `PF` 
  (percent fill) for URL blank spaces.  `US` is now Deprecated and will be 
  removed in the next update.

* All options now have a consistent naming scheme (period separator)

    - `bib.loc` - The path to the users primary .bib file (I store this in DropBox)